Fix default block height (prevent cutoff of complete blocks)

--- a/public/css/best-of.css
+++ b/public/css/best-of.css
@@ -90,7 +90,7 @@
 
 .content-preview {
   line-height: 1.4;
-  max-height: 200px;
+  max-height: 220px;
   overflow: hidden;
   position: relative;
   white-space: normal;
